tests/compile_fail/duplicate_fn.olrn
fn same() -> i64
{
    ret 1
}

fn same() -> i64
{
    ret 2
}

fn main() -> void
{
    @pl(same())
}
